--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
             <div class="hero-image">
                 <div class="image-container">
                     <div class="image-bg"></div>
-                    <div class="profile-placeholder">
-                        <i class="fas fa-user"></i>
-                    </div>
+                    <img src="assets/Profile.jpg" alt="Photo de profil" class="profile-image">
                     <div class="floating-icons">
                         <div class="floating-icon icon-1"><i class="fas fa-microchip"></i></div>
                         <div class="floating-icon icon-2"><i class="fas fa-code"></i></div>
