--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="fas fa-microchip"></i>
-                <span>EMBEDDED</span>
+                <span></span>
             </div>
             <ul class="nav-links">
                 <li><a href="#home" class="active">Accueil</a></li>
@@ -500,10 +500,10 @@
             <div class="footer-content">
                 <div class="footer-logo">
                     <i class="fas fa-microchip"></i>
-                    <span>EMBEDDED</span>
+                    <span></span>
                 </div>
                 <p>&copy; 2026 Léonard Lukamba. Tous droits réservés.</p>
-                <p class="footer-tagline">Développeur Systèmes Embarqués - Du silicium au cloud</p>
+                <p class="footer-tagline">Développeur Systèmes Embarqués</p>
             </div>
         </div>
     </footer>
