Ajout photo section À propos

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="about-img-container">
-                        <i class="fas fa-laptop-code"></i>
+                        <img src="assets/Apropos.jpg" alt="Photo À propos" class="about-photo">
                     </div>
                 </div>
                 <div class="about-text">
